--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,11 +1,11 @@
 @import "tailwindcss";
 
 @theme {
-  --color-primary: #1d4ed8;   /* Blue */
+  --color-primary: #1d4ed8;
   --color-primary-dark: #1e40af;
   --color-primary-light: #3b82f6;
 
-  --color-secondary: #f59e0b; /* Amber */
+  --color-secondary: #f59e0b;
   --color-secondary-dark: #b45309;
   --color-secondary-light: #fbbf24;
 }
